# fleetcare-data-harvest

./: .dockerignore  .funcignore  .gitignore  Dockerfile  Dockerfile.debian  README.md  entrypoint.sh  fleetcare_data_harvest.py  function_app.py  gunicorn.py  host.json  pyproject.toml  requirements.txt  utils.py  wsgi.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: image-build-scan.yml  multi-build.yaml  run-tests.yml
fleetcare-data-harvest/: __init__.py  database.py  utils.py  views.py
fleetcare_data_harvest/: __init__.py  database.py  utils.py  views.py
kustomize/base/: deployment.yaml  service.yaml
kustomize/overlays/prod/: deployment_patch.yaml  ingress.yaml  kustomization.yaml  pdb.yaml  service_patch.yaml
kustomize/overlays/uat/: deployment_patch.yaml  ingress.yaml  kustomization.yaml  pdb.yaml  service_patch.yaml
tests/: conftest.py  data.json  schema.sql  test_utils.py  test_views.py
