[project]
name = "fleetcare-data-harvest"
version = "1.1.1"
description = "A basic web service to act as a webhook for an Azure EventGrid subscription (BlobCreated events)"
authors = [{ name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" }]
license = "Apache-2.0"
requires-python = ">=3.13,<4.0"

dependencies = [
  "python-dotenv (==1.2.1)",
  "flask==3.1.2",
  "flask-sqlalchemy==3.1.1",
  "gunicorn==23.0.0",
  "azure-storage-blob==12.27.1",
  "psycopg[binary,pool]==3.2.13",
]

[dependency-groups]
dev = ["ipython>=9.7.0", "ipdb>=0.13.13", "pre-commit>=4.3.0", "pytest>=8.4.1"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 140
indent-width = 4

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
  "E722", # Bare except
]
